--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.14.1",
     "framer-motion": "^11.18.2",
     "lucide-react": "^0.548.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^6.30.1",
